Small change and backup I'm backing the code up. And the Ghost Settings menu now is changed to Settings. The theme colors can now also be changed in this menu, I want to add the option to change the time the wheel takes to spin, as the code currently is supporting that. And I need to check how the wheel scales. Also for later: Tranparent webpage on localhost only that lets a streamer overlay the wheel over their stream.

--- a/style.css
+++ b/style.css
@@ -173,8 +173,17 @@ table{
     margin-bottom: 10px;
 }
 
+.page_colors{
+    width: 70%;
+}
+
 .setting_buttons{
     bottom: 10%;
     margin: 10px;
-    
+}
+
+.ghost_name{
+    background-color: var(--secondary_color);
+    border: none;
+    padding: 5px;
 }
