--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --main_color: #8bb0f9;
     --secondary_color: #072d88;
     --accent_color: #1bc123;
@@ -13,19 +13,19 @@
     --circle_size: 90vh;
 }
 
-*{
+* {
     font-family: 'Signika Negative', sans-serif;
     color: var(--text_color);
     padding: 0;
     margin: 0;
 }
 
-body{
+body {
     background-color: var(--background_color);
     overflow: hidden;
 }
 
-nav{
+nav {
     background-color: var(--main_color);
     height: 10vh;
     padding: 10px;
@@ -34,54 +34,62 @@ nav{
     align-items: center;
 }
 
-nav > *{
+nav>* {
     margin: 0 20px;
 }
 
-nav > h1{
+nav>h1 {
     align-self: center;
     justify-self: left;
 }
 
-.buttons{
+.buttons {
     /*align to the right side*/
     margin-left: auto;
 }
 
-.button{
+.button {
     margin-left: 20px;
     background-color: var(--accent_color);
     color: var(--text_color);
     border: none;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px;
+    /* Increased padding */
     font-size: 1.2rem;
+    line-height: 1.2;
+    /* Added line-height */
     cursor: pointer;
+    transition: all 0.5s;
+    box-sizing: border-box;
+    /* Added box-sizing */
 }
 
-.remove_ghost{
-    background-color: var(--accent_color_negative); /*More reddish*/
-    margin: 0 !important;
-}
-
-.button:hover{
+.button:hover {
     background-color: var(--secondary_color);
 }
 
-main{
+
+.remove_ghost {
+    background-color: var(--accent_color_negative);
+    /*More reddish*/
+    margin: 0 !important;
+}
+
+main {
     height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.wheel{
+.wheel {
     width: var(--circle_size);
     height: var(--circle_size);
     /* background-color: red; */
 }
 
-.wheel > canvas{
+.wheel>canvas {
     height: 100%;
     width: 100%;
     margin: 0px;
@@ -89,63 +97,118 @@ main{
     border-radius: 100%;
 }
 
-.rotate{
+.rotate {
     animation: calmRotation 5s linear infinite;
     transform-origin: center;
 }
 
-.spin{
+.spin {
     animation: spinRotation var(--spin_speed) ease-in-out 1 forwards;
     transform-origin: center;
 }
 
 @keyframes calmRotation {
     from {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
-    to {
-      transform: rotate(1turn);
-    }
-  }
 
-@keyframes spinRotation{
-    from{
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+@keyframes spinRotation {
+    from {
         transform: rotate(--start_rotation);
     }
-    to{
+
+    to {
         transform: rotate(var(--end_rotation));
     }
 }
 
-.wheel2{
+.needle {
     width: var(--circle_size);
     height: var(--circle_size);
     position: absolute;
     z-index: 1;
 }
 
-.wheel2 > canvas{
+.needle>canvas {
     height: 100%;
     width: 100%;
     margin: 0px;
     border-radius: 100%;
 }
 
-.PopUp{
+
+/* Part to select ghosts by evidence */
+.ghost_and_evidence_selection {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: var(--main_color);
+    width: 100%;
+    height: 100%;
+}
+
+.evidence_window {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    background-color: var(--background_color);
+}
+
+.ghost_selection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    height: 100%;
+    background-color: var(--background_color);
+    border-left: 1px solid white;
+}
+
+.ghost_selection>div {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+.ghost {
+    padding: 10px;
+    margin: 10px;
+    width: 60%;
+    background-color: var(--main_color);
+    text-align: center;
+}
+
+.ghost:hover {
+    background-color: var(--secondary_color);
+    transition: all 0.2s;
+
+}
+
+/* End of ghost selection part */
+
+.PopUp {
     display: none;
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
     z-index: 2;
 }
 
-.Winning_Ghost{
+.Winning_Ghost {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,15 +218,15 @@ main{
     box-shadow: 10px 10px var(--secondary_color);
 }
 
-.winning_ghost_evidence{
+.winning_ghost_evidence {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding:10px;
-    margin:10px;
+    padding: 10px;
+    margin: 10px;
 }
 
-.winning_ghost_evidence > * {
+.winning_ghost_evidence>* {
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -171,12 +234,12 @@ main{
     align-items: center;
 }
 
-.winning_ghost_evidence > * > img{
+.winning_ghost_evidence>*>img {
     width: 24px;
     height: 24px;
 }
 
-.Settings{
+.Settings {
     display: none;
     /* Center on y-axis and column */
     background-color: var(--main_color);
@@ -191,13 +254,14 @@ main{
     overflow-y: scroll;
 }
 
-.evidence_popup{
+.evidence_popup {
     margin: 0;
     margin-right: 5px !important;
 }
 
+
 /* The evidence setup selection */
-.Select_Evidence{
+.Select_Evidence {
     width: 45vw;
     padding: 25px;
     background-color: var(--main_color);
@@ -208,36 +272,36 @@ main{
     flex-direction: column;
     position: absolute;
     z-index: 5;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;  
-    align-items: center;  
-}
-
-.evidence{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin:10px;
 }
 
-.evidence > *{
+.evidence {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
+.evidence>* {
     margin: 0;
 }
 
-.Current_Evidence{
+.Current_Evidence {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.evidence_select{
+.evidence_select {
     margin-top: 5px;
     background-color: var(--main_color);
 }
 
-.Confirm_Evidence{
+.Confirm_Evidence {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -246,7 +310,7 @@ main{
 
 
 /* The popup that shows up asking users for confirmation: */
-.ConfirmSelectionPopUp{
+.ConfirmSelectionPopUp {
     position: absolute;
     padding: 10px;
     display: none;
@@ -258,41 +322,41 @@ main{
     background-color: var(--main_color);
 }
 
-table{
+table {
     height: 100%;
     padding: 10px;
     margin: 10px;
     text-align: center
 }
 
-.legend > th{
+.legend>th {
     border-bottom: 2px solid var(--secondary_color);
     margin-bottom: 10px;
 }
 
-.page_colors{
+.page_colors {
     width: 70%;
 }
 
-.setting_buttons{
+.setting_buttons {
     bottom: 10%;
     margin: 10px;
 }
 
-.ghost_name{
+.ghost_name {
     background-color: var(--secondary_color);
     border: none;
     padding: 5px;
 }
 
-.SpinSpeed{
+.SpinSpeed {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
 }
 
-.SpinSpeed > input{
+.SpinSpeed>input {
     width: 100%;
     accent-color: var(--accent_color);
 }
